# crc-wafa

./: .gitignore  AzureAiSearch.py  app.py  main.py  prompt.py  pyproject.toml  retreiver.py  test.py  utils.py
